iaac/blueprint/infra/base/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-metrics
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 9187
      targetPort: 9187
      protocol: TCP
      name: metrics
  selector:
    app: postgres
